# opamui

./: .dprint.json  .goreleaser.yml  .merlintignore  .ocamlformat  .pre-commit-config.yaml  Makefile  README.md  dune-project  licenserc.toml  opamui.opam
.github/: dependabot.yml  release-drafter.yml  release.yml  renovate.json5  settings.yml
.github/workflows/: build-ocaml.yml  ossf.yml  release-artifacts.yml  release-drafter.yml
lib/: dune  opam_client.ml  opam_client.mli  ui.ml  ui.mli
test/: dune
